--- a/faceDraw.css
+++ b/faceDraw.css
@@ -6,4 +6,21 @@ button {
 select {
     padding: 10px;
     border-radius: 5px;
+    background-color: beige;
+}
+
+#head {
+    background-color: cadetblue;
+}
+
+#eyes{
+    background-color: darkred;
+}
+
+#mouth {
+    background-color: lightgreen;
+}
+
+#reset {
+    background-color: coral;
 }
